--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
     hooks:
       - id: check-merge-conflict
       - id: check-added-large-files
+        exclude: ^docs/
       - id: debug-statements
       - id: mixed-line-ending
       - id: check-case-conflict
